# CodingWoolfs_BCX26

./: .env.example  .gitignore  README.md  chunk_manuals.py  chunk_manuals_v2.py  cnc_events.json  embed_and_upload.py  machines.json  resolutions.json  shift_notes.json
AI/: .gitignore  agent.py  generate_embeddings.py  mdb_import.py
AI/app/MachineWhisperer/: pyproject.toml
backend/: main.py  pyproject.toml
backend/agentcore/: agentcore.json  aws-targets.json
backend/agentcore/.cli/: deployed-state.json
backend/agentcore/cdk/: package-lock.json
backend/app/MachineWhisperer/: main.py
backend/app/MyAgent/: main.py  mongo_tools.py  pyproject.toml  requirements.txt
backend/db/: db.py  model.py
backend/db/models/: cnc_events_model.py  machines_model.py  resolutions_model.py  shift_notes_model.py
backend/server/: main.py  requirements.txt
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/.github/: copilot-instructions.md
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ChatTab.tsx  LanguageSwitcher.tsx  LogReportModal.tsx  MachineList.tsx  MachineModal.tsx  MessageBubble.tsx  PhotoTab.tsx  VoiceTab.tsx
frontend/src/stores/: chatStore.ts
frontend/src/utils/: api.ts  bedrock.ts  dummyData.ts  voiceAssistant.ts
manuals/: 786398117-B-63945EN-04-08.txt  832025899-Fanuc-31i-Operators-Manual.txt
