[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MyAgent"
version = "0.1.0"
description = "AgentCore Runtime Application using LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "opentelemetry-instrumentation-langchain >= 0.59.0",
    "langgraph>=1.0.2",
    "mcp >= 1.19.0",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain>=1.0.3",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "langchain-aws >= 1.0.0",
    "pymongo[srv]>=4.17.0",
    "boto3>=1.43.25",
    "python-dotenv>=1.2.2",
    "langchain-core>=1.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
